--- a/templates/blog1/base.html
+++ b/templates/blog1/base.html
@@ -3,13 +3,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'style.min.css' %}">
     <title>{% block title %}{% endblock title %}</title>
+    <link rel="shortcut icon" type="image/png" href="https://img.icons8.com/small/64/000000/fire-heart.png"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'style.min.css' %}">
+    <script defer src="{% static 'alpine.min.js' %}"></script>
 </head>
-<body>
-    {% block main %}
+<body class="bg-gray-100">
 
-    {% endblock main %}
+{% include "blog1/header.html" %}
+
+{% include "blog1/hero.html" %}
+
+{% block layout %}
+
+{% endblock layout %}
+
 </body>
 </html>
