--- a/templates/blog1/index.html
+++ b/templates/blog1/index.html
@@ -6,7 +6,7 @@
         <article class="card">
             <div class="h-14 flex items-center justify-between px-4">
                 <h3 class="text-start mr-1 leading-5">{{post.title}}</h3>
-                <div class="text-sm text-gray-400 truncate">flickr<a href="" class="hover:underline ml-1" target="blank">@John Doe</a></div>
+                <div class="text-sm text-gray-400 truncate">flickr<a href="{{post.url}}" class="hover:underline ml-1" target="blank">{{post.author}}</a></div>
             </div>
             <figure>
                 <a href=""><img class="w-full" src="{{post.image}}"></a>
