--- a/templates/form1/index.html
+++ b/templates/form1/index.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -7,8 +8,11 @@
             name="viewport"
             content="width=device-width, initial-scale=1.0"
         >
-        <script src="https://cdn.tailwindcss.com"></script>
-        <script src="https://unpkg.com/htmx.org"></script>
+        <link
+            rel="stylesheet"
+            href="{% static 'style.min.css' %}"
+        >
+        <script src="{% static 'htmx.min.js' %}"></script>
         <title>Document</title>
     </head>
 
@@ -19,8 +23,16 @@
                     class="m-auto"
                     hx-post="{% url 'upload' %}"
                     hx-target="#res"
+                    hx-swap="innerHTML"
+                    enctype="multipart/form-data"
+                    hx-encoding="multipart/form-data"
                 >
                     {% csrf_token %}
+                    <input
+                        type="file"
+                        name="image"
+                        class="border-slate-400 border"
+                    >
                     <button
                         type="submit"
                         class="bg-green-500 p-2 rounded-xl text-white"
