--- a/templates/todo1/index.html
+++ b/templates/todo1/index.html
@@ -1,14 +1,80 @@
 {%load static%}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'style.min.css' %}">
-    <script src="{% static 'htmx.min.js' %}"></script>
-    <title>Document</title>
-</head>
-<body>
-    <h1 class="text-red-400" hx-get="https://reqres.in/api/users">test3</h1>
-</body>
+
+    <head>
+        <meta charset="UTF-8">
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1.0"
+        >
+        <link
+            rel="stylesheet"
+            href="{% static 'style.min.css' %}"
+        >
+        <script src="{% static 'htmx.min.js' %}"></script>
+        <style>
+            .htmx-swapping {
+                opacity: 0;
+                transition: opacity 1s ease-out;
+            }
+        </style>
+        <title>Document</title>
+    </head>
+
+    <body class="bg-sky-500">
+        <nav class="flex justify-between items-center bg-gradient-to-r from-cyan-500 to-sky-500 px-4 py-6 text-center">
+            <a
+                href="/"
+                class="text-2xl text-white"
+            >Tailwind Todo</a>
+        </nav>
+
+        <div class="bg-white mx-auto my-6 p-2 lg:p-10 rounded-xl w-4/5">
+            <form
+                class="flex space-x-4 mb-6"
+                hx-post="{% url 'add_todo' %}"
+                hx-target="#todos"
+                hx-swap="afterend"
+            >
+                <input
+                    type="text"
+                    name="title"
+                    class="flex-1 bg-gray-200 px-4 py-3 rounded-xl title"
+                    placeholder="The title"
+                >
+
+                <button class="bg-cyan-500 hover:bg-cyan-600 p-3 rounded-xl text-white">+</button>
+            </form>
+
+            <div class="flex bg-gray-100 py-3 rounded-xl">
+                <div class="w-4/5">
+                    <p class="px-6 font-medium text-gray-500 text-xs uppercase">Title</p>
+                </div>
+
+                <div class="md:block text-right hidden px-6 w-1/5">
+                    <p class="font-medium text-gray-500 text-xs uppercase">Actions</p>
+                </div>
+            </div>
+
+            <div
+                class="divide-y divide-gray-200"
+                id="todos"
+            >
+                {% for todo in todos %}
+                {% include 'todo1/task.html' %}
+                {% endfor %}
+            </div>
+        </div>
+    </body>
+    <script>
+        document.body.addEventListener('htmx:configRequest', (event) => {
+            event.detail.headers['X-CSRFToken'] = '{{ csrf_token }}';
+        });
+
+        document.body.addEventListener('htmx:afterRequest', (event) => {
+            document.querySelector("input.title").value = '';
+        });
+    </script>
+
 </html>
