todo1 add update & delete

--- a/templates/todo1/index.html
+++ b/templates/todo1/index.html
@@ -13,6 +13,7 @@
             href="{% static 'style.min.css' %}"
         >
         <script src="{% static 'htmx.min.js' %}"></script>
+        <script src="{% static 'alpine.min.js' %}"></script>
         <style>
             .htmx-swapping {
                 opacity: 0;
@@ -44,7 +45,7 @@
                     placeholder="The title"
                 >
 
-                <button class="bg-cyan-500 hover:bg-cyan-600 p-3 rounded-xl text-white">+</button>
+                <button class="bg-cyan-500 hover:bg-cyan-600 rounded-xl text-white">+</button>
             </form>
 
             <div class="flex bg-gray-100 py-3 rounded-xl">
