--- a/templates/todo1/index.html
+++ b/templates/todo1/index.html
@@ -34,7 +34,7 @@
         <div class="bg-white mx-auto my-6 p-2 lg:p-10 rounded-xl w-4/5">
             <form
                 class="flex space-x-4 mb-6"
-                hx-post="{% url 'add_todo' %}"
+                hx-post="{% url 'create_todo' %}"
                 hx-target="#todos"
                 hx-swap="afterend"
             >
