--- a/templates/book1/create_book.html
+++ b/templates/book1/create_book.html
@@ -3,11 +3,7 @@
 {% block main %}
 
     <h1>create book for {{author.name}}</h1>
-    <form method="POST">
-        {% csrf_token %}
-        {{formset.management_form}}
-        {{formset}}
-        <button>Submit</button>
-    </form>
+    <button hx-get="{% url 'book_form'%}" hx-swap="beforeend" hx-target="#bookforms">add new book</button>
+    <div id="bookforms"></div>
 
 {% endblock main %}
