htmx: listing books

--- a/templates/book1/book_detail.html
+++ b/templates/book1/book_detail.html
@@ -1,1 +1,6 @@
-{{book.title}}, {{book.pages}}
+<div>
+    <h3>title: {{book.title}}</h3>
+    <p>pageNumber: {{book.pages}}</p>
+    <button hx-get="">update</button>
+    <button hx-post="">delete</button>
+</div>
