htmx: implement delete

--- a/templates/book1/book_detail.html
+++ b/templates/book1/book_detail.html
@@ -1,6 +1,6 @@
-<div>
+<div hx-target="this" hx-swap="innerHTML">
     <h3>title: {{book.title}}</h3>
     <p>pageNumber: {{book.pages}}</p>
     <button hx-get="">update</button>
-    <button hx-post="">delete</button>
+    <button hx-post="{% url 'book_delete' book.id %}">delete</button>
 </div>
