--- a/templates/modal1/movie_list.html
+++ b/templates/modal1/movie_list.html
@@ -4,7 +4,7 @@
   <td>{{ movie.year }}</td>
   <td>{{ movie.get_rating_display }}</td>
   <td>
-    {% comment %} <button class="btn btn-primary btn-sm" hx-get="{% url 'edit_movie' pk=movie.pk %}" hx-target="#dialog">Edit</button> {% endcomment %}
+    <button class="btn btn-primary btn-sm" hx-get="{% url 'edit_movie' pk=movie.pk %}" hx-target="#dialog">Edit</button>
   </td>
 </tr>
 {% endfor %}
