--- a/templates/modal1/movie_form.html
+++ b/templates/modal1/movie_form.html
@@ -24,7 +24,7 @@
   </div>
   <div class="modal-footer">
     {% if movie %}
-    {% comment %} <button type="button" class="btn btn-danger" hx-post="{% url 'remove_movie' pk=movie.pk %}">Remove</button> {% endcomment %}
+    <button type="button" class="btn btn-danger" hx-post="{% url 'delete_movie' pk=movie.pk %}">Delete</button>
     <span class="flex-grow-1"></span>
     {% endif %}
     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
