--- a/templates/book2/index.html
+++ b/templates/book2/index.html
@@ -33,10 +33,12 @@
                 <input
                     type="title"
                     class="border"
+                    name="title"
                 >
                 <input
                     type="author"
                     class="border"
+                    name="author"
                 >
                 <button type="submit">submit</button>
             </form>
