--- a/templates/book2/index.html
+++ b/templates/book2/index.html
@@ -19,14 +19,19 @@
     <body>
         <div class="space-y-8 mx-auto mt-10 w-5/6">
             <h1 class="text-center underline">my list</h1>
+            {% for book in books %}
+            <ul
+                class="mx-auto text-center"
+            >{{book.title}}</ul>
+            {% endfor %}
             <ul
                 class="mx-auto text-center"
                 id="goal"
-            >empty</ul>
+                ></ul>
             <form
                 class="flex gap-2"
                 hx-post="{% url 'task' %}"
-                hx-swap="afterend"
+                hx-swap="beforeend"
                 hx-target="#goal"
             >
                 {% csrf_token %}
