--- a/templates/todo2/index.html
+++ b/templates/todo2/index.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'style.min.css' %}">
+    <script src="{% static 'htmx.min.js' %}"></script>
     <title>Document</title>
 </head>
-<body>
+<body hx-headers='{"X-CSRFToken" : "{{csrf_token}}"}'>
     <div class="max-w-md mx-auto bg-white shadow-lg rounded-lg overflow-hidden mt-16">
     <div class="px-4 py-2">
         <h1 class="text-gray-800 font-bold text-2xl uppercase">To-Do List</h1>
@@ -16,27 +17,23 @@
         <div class="flex items-center border-b-2 border-teal-500 py-2">
             <input
                 class="appearance-none bg-transparent border-none w-full text-gray-700 mr-3 py-1 px-2 leading-tight focus:outline-none"
-                type="text" placeholder="Add a task">
+                type="text"
+                placeholder="Add a task"
+                name="title"
+                >
             <button
                 class="flex-shrink-0 bg-teal-500 hover:bg-teal-700 border-teal-500 hover:border-teal-700 text-sm border-4 text-white py-1 px-2 rounded"
-                type="button">
+                type="button"
+                name="add_task"
+                hx-post="{%url 'add_task'%}"
+                hx-target="#tasks"
+                >
                 Add
             </button>
         </div>
     </form>
-    <ul class="divide-y divide-gray-200 px-4">
-        {% for task in  tasks %}
-            <li class="py-4">
-                <div class="flex items-center">
-                    <input id="todo1" name="todo1" type="checkbox"
-                        class="h-4 w-4 text-teal-600 focus:ring-teal-500 border-gray-300 rounded">
-                    <label for="todo1" class="ml-3 block text-gray-900">
-                        <span class="text-lg font-medium">{{task.title}}</span>
-                        <span class="text-sm font-light text-gray-500">Due on {{task.updated_at}}</span>
-                    </label>
-                </div>
-            </li>
-        {% endfor %}
+    <ul class="divide-y divide-gray-200 px-4" id="tasks">
+       {% include "todo2/tasks.html" %}
     </ul>
 </div>
 </body>
