--- a/templates/todo2/tasks.html
+++ b/templates/todo2/tasks.html
@@ -1,12 +1,32 @@
- {% for task in  tasks %}
-            <li class="py-4">
-                <div class="flex items-center">
-                    <input id="todo1" name="todo1" type="checkbox"
-                        class="h-4 w-4 text-teal-600 focus:ring-teal-500 border-gray-300 rounded">
-                    <label for="todo1" class="ml-3 block text-gray-900">
-                        <span class="text-lg font-medium">{{task.title}}</span>
-                        <span class="text-sm font-light text-gray-500">Due on {{task.updated_at}}</span>
-                    </label>
-                </div>
-            </li>
-        {% endfor %}
+{% for task in tasks %}
+<li class="py-4">
+    <div class="flex items-center">
+        <input
+            hx-put="{% url 'edit_task' task.id %}"
+            hx-target="#tasks"
+            {% if task.status %}checked{% endif %}
+            id="todo1"
+            name="todo1"
+            type="checkbox"
+            class="border-gray-300 rounded focus:ring-teal-500 w-4 h-4 text-teal-600"
+        >
+        <label
+            for="todo1"
+            class="block ml-3 text-gray-900"
+        >
+            <span class="font-medium text-lg">
+            {% if task.status  %}
+                <s>{{task.title}}</s>
+            {% else %}
+                {{task.title}}
+            {% endif %}</span>
+            <span class="font-light text-gray-500 text-sm">Due on {{task.updated_at}}</span>
+        </label>
+        <span
+            class="px-5 cursor-pointer"
+            hx-delete="{% url 'delete_task' task.id %}"
+            hx-target="#tasks"
+        >X</span>
+    </div>
+</li>
+{% endfor %}
