--- a/templates/todo2/index.html
+++ b/templates/todo2/index.html
@@ -20,6 +20,7 @@
                 type="text"
                 placeholder="Add a task"
                 name="title"
+                hx-trigger="keyup[key=='enter'] from:body"
                 >
             <button
                 class="flex-shrink-0 bg-teal-500 hover:bg-teal-700 border-teal-500 hover:border-teal-700 text-sm border-4 text-white py-1 px-2 rounded"
