--- a/templates/store1/index.html
+++ b/templates/store1/index.html
@@ -13,13 +13,14 @@
 
 <div class="xl:px-0 max-w-6xl px-6 py-2 mx-auto">
     <div class="products flex flex-wrap items-center">
+    {% for product in products %}
         <div class="md:w-1/3 xl:w-1/4 w-full p-6">
             <a href="#">
                 <img class="rounded-xl hover:shadow-lg">
             </a>
 
             <div class="flex items-center justify-between pt-3">
-                <a href="#">Product name</a>
+                <a href="#">{{product.name}}</a>
 
                 <a href="#" class="hover:text-purple-800 text-purple-500">
                     <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -28,80 +29,9 @@
                 </a>
             </div>
 
-            <p class="pt-1 text-gray-400">$9.99</p>
+            <p class="pt-1 text-gray-400">${{product.price}}</p>
         </div>
-
-        <div class="md:w-1/3 xl:w-1/4 w-full p-6">
-            <a href="#">
-                <img class="rounded-xl hover:shadow-lg">
-            </a>
-
-            <div class="flex items-center justify-between pt-3">
-                <a href="#">Product name</a>
-
-                <a href="#" class="hover:text-purple-800 text-purple-500">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z" />
-                    </svg>
-                </a>
-            </div>
-
-            <p class="pt-1 text-gray-400">$9.99</p>
-        </div>
-
-        <div class="md:w-1/3 xl:w-1/4 w-full p-6">
-            <a href="#">
-                <img class="rounded-xl hover:shadow-lg">
-            </a>
-
-            <div class="flex items-center justify-between pt-3">
-                <a href="#">Product name</a>
-
-                <a href="#" class="hover:text-purple-800 text-purple-500">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z" />
-                    </svg>
-                </a>
-            </div>
-
-            <p class="pt-1 text-gray-400">$9.99</p>
-        </div>
-
-        <div class="md:w-1/3 xl:w-1/4 w-full p-6">
-            <a href="#">
-                <img class="rounded-xl hover:shadow-lg">
-            </a>
-
-            <div class="flex items-center justify-between pt-3">
-                <a href="#">Product name</a>
-
-                <a href="#" class="hover:text-purple-800 text-purple-500">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z" />
-                    </svg>
-                </a>
-            </div>
-
-            <p class="pt-1 text-gray-400">$9.99</p>
-        </div>
-
-        <div class="md:w-1/3 xl:w-1/4 w-full p-6">
-            <a href="#">
-                <img class="rounded-xl hover:shadow-lg">
-            </a>
-
-            <div class="flex items-center justify-between pt-3">
-                <a href="#">Product name</a>
-
-                <a href="#" class="hover:text-purple-800 text-purple-500">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z" />
-                    </svg>
-                </a>
-            </div>
-
-            <p class="pt-1 text-gray-400">$9.99</p>
-        </div>
+    {% endfor %}
     </div>
 </div>
 {% endblock %}
