--- a/templates/store1/base.html
+++ b/templates/store1/base.html
@@ -14,7 +14,7 @@
                     <a href="#" class="py-4 text-lg font-semibold text-purple-500">Nordic Homes</a>
 
                     <ul class="flex items-center space-x-4">
-                        <li><a href="#">Shop</a></li>
+                        <li><a href="{% url 'shop' %}">Shop</a></li>
                         <li><a href="#">About</a></li>
                     </ul>
                 </div>
