--- a/templates/store1/product.html
+++ b/templates/store1/product.html
@@ -3,17 +3,22 @@
 {% block content %}
 <div class="xl:px-0 flex flex-wrap max-w-6xl px-6 py-6 mx-auto">
     <div class="images lg:mb-0 lg:w-3/5 w-full mb-6">
-        <img class="rounded-xl" src="1.jpg">
+        <img class="rounded-xl" src="{{product.get_thumbnail}}">
     </div>
 
     <div class="information lg:w-2/5 lg:p-6 w-full">
-        <h1 class="text-2xl">Product Name</h1>
+        <h1 class="text-2xl">{{product.name}}</h1>
 
-        <p class="mt-1 text-gray-400">$9.99</p>
-
-        <p class="mt-6 text-gray-700">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</p>
-
-        <a href="#" class="rounded-xl hover:bg-purple-700 inline-block px-8 py-4 mt-6 text-white bg-purple-500">
+        <p class="mt-1 text-gray-400">${{product.price}}</p>
+        {% if product.description %}
+            <p class="mt-6 text-gray-700">{{ product.description }}</p>
+        {% endif %}
+        <a
+        class="rounded-xl hover:bg-purple-700 inline-block px-8 py-4 mt-6 text-white bg-purple-500 cursor-pointer"
+        hx-get="{% url 'add_cart' product.id %}"
+        hx-target="#menu-cart-button"
+        hx-swap="outerHTML"
+        >
             Add to cart
         </a>
     </div>
