--- a/templates/store1/shop.html
+++ b/templates/store1/shop.html
@@ -29,23 +29,7 @@
 
     <div class="products lg:w-3/4 flex flex-wrap items-center w-full -mt-4">
         {% for product in products %}
-            <div class="md:w-1/3 xl:w-1/4 w-full p-6">
-                <a href="#">
-                    <img class="rounded-xl hover:shadow-lg">
-                </a>
-
-                <div class="flex items-center justify-between pt-3">
-                    <a href="#">{{ product.name }}</a>
-
-                    <a href="#" class="hover:text-purple-800 text-purple-500">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z" />
-                        </svg>
-                    </a>
-                </div>
-
-                <p class="pt-1 text-gray-400">$9.99</p>
-            </div>
+          {% include 'store1/product_list.html' %}
         {% endfor %}
     </div>
 </div>
