--- a/templates/search1/index.html
+++ b/templates/search1/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>People directory</title>
+    <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/htmx.org@1.9.5" integrity="sha384-xcuj3WpfgjlKF+FXhSQFQ0ZNr39ln+hwjN3npfM9VBnUskLolQAcN80McRIVOPuO" crossorigin="anonymous"></script>
 </head>
 <body id="container">
