--- a/templates/ani1/bigbox.html
+++ b/templates/ani1/bigbox.html
@@ -1,13 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://unpkg.com/htmx.org"></script>
-    <title>Document</title>
-</head>
-<body>
-    <div class="size-40 bg-blue-400 transition-all duration-1000" hx-swap="outerHTML" id="b1" hx-get="{% url 'index' %}"></div>
-</body>
-</html>
+
+    <div class="size-40 bg-blue-400 transition-all duration-1000" hx-swap="outerHTML" id="b1" hx-get="{% url 'ani1:index' %}"></div>
