--- a/templates/ani1/index.html
+++ b/templates/ani1/index.html
@@ -8,6 +8,6 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="size-20 bg-red-400 transition-all duration-[3000ms]" hx-swap="outerHTML" id="b1" hx-get="{% url 'bigbox' %}"></div>
+    <div class="size-20 bg-red-400 transition-all duration-[3000ms]" hx-swap="outerHTML" id="b1" hx-get="{% url 'ani1:bigbox' %}"></div>
 </body>
 </html>
