scroll2: integrate htmx scroll / completed

--- a/templates/scroll2/index.html
+++ b/templates/scroll2/index.html
@@ -1,1 +1,15 @@
-scroll2
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>Infinite Scroll with Django+htmx</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <script src="https://unpkg.com/htmx.org"></script>
+    </head>
+    <body>
+        <h1>Infinity Scroll - Page {{ page_obj.number }}</h1>
+        <div>{% include 'scroll2/product.html' with products=products %}</div>
+    </body>
+</body>
+</html>
