--- a/templates/todo2/tasks.html
+++ b/templates/todo2/tasks.html
@@ -5,22 +5,22 @@
             hx-put="{% url 'edit_task' task.id %}"
             hx-target="#tasks"
             {% if task.status %}checked{% endif %}
-            id="todo1"
+            id="i{{forloop.counter}}"
             name="todo1"
             type="checkbox"
-            class="border-gray-300 rounded focus:ring-teal-500 w-4 h-4 text-teal-600"
+            class="focus:ring-teal-500 w-4 h-4 text-teal-600 border-gray-300 rounded"
         >
         <label
-            for="todo1"
+            for="i{{forloop.counter}}"
             class="block ml-3 text-gray-900"
         >
-            <span class="font-medium text-lg">
+            <span class="text-lg font-medium">
             {% if task.status  %}
                 <s>{{task.title}}</s>
             {% else %}
                 {{task.title}}
             {% endif %}</span>
-            <span class="font-light text-gray-500 text-sm">Due on {{task.updated_at}}</span>
+            <span class="text-sm font-light text-gray-500">Due on {{task.updated_at}}</span>
         </label>
         <span
             class="px-5 cursor-pointer"
