blog3: scroll infinite with bugs

--- a/templates/blog2/index.html
+++ b/templates/blog2/index.html
@@ -5,6 +5,7 @@
         List View
     </title>
     <meta charset="utf-8">
+    <script src="https://cdn.tailwindcss.com"></script>
     <style>
         main {
            padding-top: 1rem;
