--- a/templates/todo2/index.html
+++ b/templates/todo2/index.html
@@ -6,24 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'style.min.css' %}">
     <script src="{% static 'htmx.min.js' %}"></script>
+    <script src="https://unpkg.com/htmx.org"></script>
+    <script src="https://unpkg.com/alpinejs" defer></script>
     <title>Document</title>
 </head>
 <body hx-headers='{"X-CSRFToken" : "{{csrf_token}}"}'>
-    <div class="max-w-md mx-auto bg-white shadow-lg rounded-lg overflow-hidden mt-16">
+    <div class="max-w-md mx-auto mt-16 overflow-hidden bg-white rounded-lg shadow-lg">
     <div class="px-4 py-2">
-        <h1 class="text-gray-800 font-bold text-2xl uppercase">To-Do List</h1>
+        <h1 class="text-2xl font-bold text-gray-800 uppercase">To-Do List</h1>
     </div>
-    <form class="w-full max-w-sm mx-auto px-4 py-2">
-        <div class="flex items-center border-b-2 border-teal-500 py-2">
+    <form class="w-full max-w-sm px-4 py-2 mx-auto">
+        <div class="flex items-center py-2 border-b-2 border-teal-500">
             <input
-                class="appearance-none bg-transparent border-none w-full text-gray-700 mr-3 py-1 px-2 leading-tight focus:outline-none"
+                class="focus:outline-none w-full px-2 py-1 mr-3 leading-tight text-gray-700 bg-transparent border-none appearance-none"
                 type="text"
                 placeholder="Add a task"
                 name="title"
                 hx-trigger="keyup[key=='enter'] from:body"
+                @submit.prevent
                 >
             <button
-                class="flex-shrink-0 bg-teal-500 hover:bg-teal-700 border-teal-500 hover:border-teal-700 text-sm border-4 text-white py-1 px-2 rounded"
+                class="hover:bg-teal-700 hover:border-teal-700 flex-shrink-0 px-2 py-1 text-sm text-white bg-teal-500 border-4 border-teal-500 rounded"
                 type="button"
                 name="add_task"
                 hx-post="{%url 'add_task'%}"
@@ -34,7 +37,7 @@
             </button>
         </div>
     </form>
-    <ul class="divide-y divide-gray-200 px-4" id="tasks">
+    <ul class="px-4 divide-y divide-gray-200" id="tasks">
        {% include "todo2/tasks.html" %}
     </ul>
 </div>
