--- a/templates/regis2/book_row.html
+++ b/templates/regis2/book_row.html
@@ -1,6 +1,8 @@
 <tr>
     <th class="px-4 py-2">+ / -</th>
-    <th class="px-4 py-2">{{ book.title }}</th>
+    <th class="px-4 py-2 text-blue-700 cursor-pointer"
+        hx-get="{% url 'detail_book' book.pk %}"
+        hx-target="#i6">{{ book.title }}</th>
     <th class="px-4 py-2">{{ book.author }}</th>
     <th class="px-4 py-2">Edit or Delete</th>
 </tr>
