regis2: update book

--- a/templates/regis2/book.html
+++ b/templates/regis2/book.html
@@ -13,7 +13,7 @@
             <h1 class="text-2xl">Booklist</h1>
             <button class="px-4 py-2 text-white bg-teal-400"
                     hx-get="{% url 'create_book' %}"
-                    hx-target="#g">ADD</button>
+                    hx-target="#i6">ADD</button>
         </div>
         <table id="a" class="border-spacing-4 w-full table-auto">
             <thead class="border-b-4">
