--- a/templates/regis2/book_row.html
+++ b/templates/regis2/book_row.html
@@ -1,8 +1,10 @@
-<tr>
+<tr id="book-{{ book.id }}">
     <th class="px-4 py-2">+ / -</th>
     <th class="px-4 py-2 text-blue-700 cursor-pointer"
         hx-get="{% url 'detail_book' book.pk %}"
         hx-target="#i6">{{ book.title }}</th>
     <th class="px-4 py-2">{{ book.author }}</th>
-    <th class="px-4 py-2">Edit or Delete</th>
+    <th class="px-4 py-2">
+        <span hx-get="{% url 'update_book' book.pk %}" hx-target="#i6">Edit</span> or <span>Delete</span>
+    </th>
 </tr>
