regis2: fixed add_error

--- a/templates/regis2/book_row.html
+++ b/templates/regis2/book_row.html
@@ -9,6 +9,6 @@
         or
         <span hx-delete="{% url 'delete_book' book.id %}"
               hx-target="closest tr"
-              hx-swap="outerHTML swap:500ms">Delete</span>
+              hx-swap="outerHTML">Delete</span>
     </th>
 </tr>
