--- a/templates/regis2/book_row.html
+++ b/templates/regis2/book_row.html
@@ -1,14 +1,53 @@
 <tr id="book-{{ book.id }}">
-    <th class="px-4 py-2">+ / -</th>
-    <th class="px-4 py-2 text-blue-700 cursor-pointer"
+    <td class="px-4 py-2 text-center">
+        {% if book.like %}
+            <span hx-post="{% url 'toggle_like' book.pk %}"
+                  hx-target="#book-{{ book.id }}"
+                  hx-swap="outerHTML"
+                  hx-vals='{"action" : "unlike"}'
+                  class="size-6 inline-block bg-green-400 border border-green-400 rounded-full"></span>
+        {% elif not book.like %}
+            <span class="size-6 inline-block border border-green-400 rounded-full"
+                  hx-post="{% url 'toggle_like' book.pk %}"
+                  hx-target="#book-{{ book.id }}"
+                  hx-swap="outerHTML"
+                  hx-vals='{"action" : "like"}'></span>
+        {% elif book.like is None %}
+            <span class="size-6 inline-block border border-green-400 rounded-full"
+                  hx-post="{% url 'toggle_like' book.pk %}"
+                  hx-target="#book-{{ book.id }}"
+                  hx-swap="outerHTML"
+                  hx-vals='{"action" : "like"}'></span>
+        {% endif %}
+        {% if book.like is None %}
+            <span hx-post="{% url 'toggle_like' book.pk %}"
+                  hx-target="#book-{{ book.id }}"
+                  hx-swap="outerHTML"
+                  hx-vals='{"action" : "unlike"}'
+                  class="size-6 inline-block border border-red-400 rounded-full"></span>
+        {% elif book.like %}
+            <span hx-post="{% url 'toggle_like' book.pk %}"
+                  hx-target="#book-{{ book.id }}"
+                  hx-swap="outerHTML"
+                  hx-vals='{"action" : "unlike"}'
+                  class="size-6 inline-block border border-red-400 rounded-full"></span>
+        {% elif not book.like %}
+            <span hx-post="{% url 'toggle_like' book.pk %}"
+                  hx-target="#book-{{ book.id }}"
+                  hx-swap="outerHTML"
+                  hx-vals='{"action" : "like"}'
+                  class="size-6 inline-block bg-red-400 border border-red-400 rounded-full"></span>
+        {% endif %}
+    </td>
+    <td class="px-4 py-2 text-center text-blue-700 cursor-pointer"
         hx-get="{% url 'detail_book' book.pk %}"
-        hx-target="#i6">{{ book.title }}</th>
-    <th class="px-4 py-2">{{ book.author }}</th>
-    <th class="px-4 py-2">
+        hx-target="#i6">{{ book.title }}</td>
+    <td class="px-4 py-2 text-center">{{ book.author }}</td>
+    <td class="px-4 py-2 text-center">
         <span hx-get="{% url 'update_book' book.pk %}" hx-target="#i6">Edit</span>
         or
         <span hx-delete="{% url 'delete_book' book.id %}"
               hx-target="closest tr"
               hx-swap="outerHTML">Delete</span>
-    </th>
+    </td>
 </tr>
