--- a/templates/book2/task.html
+++ b/templates/book2/task.html
@@ -1,8 +1,6 @@
-<ul class="flex gap-2 bg-green-300 mx-auto p-2 w-fit text-center text-white">
-    <div>{{book.title}}</div>
-    <button
-        class="bg-red-300 p-2 text-white"
-        hx-delete="{% url 'delete' book.id %}"
-        hx-headers='{"X-CSRFToken" : "{{csrf_token}}"}'
-    >delete</button>
+<ul class="w-fit flex gap-2 p-2 mx-auto text-center text-white bg-green-300">
+    <div>{{ book.title }}</div>
+    <button class="p-2 text-white bg-red-300"
+            hx-delete="{% url 'delete_task' book.id %}"
+            hx-headers='{"X-CSRFToken" : "{{ csrf_token }}"}'>delete</button>
 </ul>
