--- a/templates/search1/index.html
+++ b/templates/search1/index.html
@@ -1,34 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>People directory</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://unpkg.com/htmx.org@1.9.5" integrity="sha384-xcuj3WpfgjlKF+FXhSQFQ0ZNr39ln+hwjN3npfM9VBnUskLolQAcN80McRIVOPuO" crossorigin="anonymous"></script>
-</head>
-<body id="container">
-
-<h3>
-    <span class="htmx-indicator">
-      ...
-   </span>
-</h3>
-
-<form>
-    {% csrf_token %}
-    <input class="form-control" type="search"
-           name="search" placeholder="Begin Typing To Search Users..."
-           hx-get="result/"
-           hx-trigger="keyup changed, search"
-           hx-target="#search-results"
-           hx-indicator=".htmx-indicator">
-</form>
-
-<div id="search-results">
-    {% include "search1/result.html" %}
-</div>
-
-<style>
+    <head>
+        <meta charset="UTF-8">
+        <title>People directory</title>
+        <script src="https://cdn.tailwindcss.com"></script>
+        <script src="https://unpkg.com/htmx.org@1.9.5"
+                integrity="sha384-xcuj3WpfgjlKF+FXhSQFQ0ZNr39ln+hwjN3npfM9VBnUskLolQAcN80McRIVOPuO"
+                crossorigin="anonymous"></script>
+    </head>
+    <body id="container">
+        <h3>
+            <span class="htmx-indicator">...</span>
+        </h3>
+        <form>
+            {% csrf_token %}
+            <input class="form-control"
+                   type="search"
+                   name="search"
+                   placeholder="Begin Typing To Search Users..."
+                   hx-get="{% url 'search1:result' %}"
+                   hx-trigger="keyup changed, search"
+                   hx-target="#search-results"
+                   hx-indicator=".htmx-indicator">
+        </form>
+        <div id="search-results">{% include "search1/result.html" %}</div>
+        <style>
     #container {
         max-width: 800px;
         margin: auto;
@@ -62,7 +58,6 @@
     .highlight {
         background-color: #46ffb3;
     }
-</style>
-
-</body>
+        </style>
+    </body>
 </html>
